// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`triplify examples Alice.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:contains [
		schema:name \\"Alice\\" ;
		dot:linktext \\"Alice.md#Alice\\" ;
		rdf:type <http://example.org/note/Person.md> ;
		dot:related <http://example.org/note/Ice%20cream.md> ;
	] .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

<http://example.org/note/Ice%20cream.md> schema:name \\"Ice cream\\" .

"
`;

exports[`triplify examples People.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/People.md> schema:name \\"People\\" ;
	dot:contains [
		schema:name \\"People\\" ;
		dot:linktext \\"People.md#People\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			dot:linktext \\"People.md#Alice\\" ;
			<http://example.org/property/foaf:knows> <http://example.org/note/Alison.md> ;
		], [
			schema:name \\"Alison\\" ;
			dot:linktext \\"People.md#Alison\\" ;
			<http://example.org/property/foaf:knows> <http://example.org/note/Alice.md> ;
		] ;
	] .

<http://example.org/property/foaf:knows> schema:name \\"foaf:knows\\" .

<http://example.org/note/Alison.md> schema:name \\"Alison\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" .

"
`;

exports[`triplify examples Person.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:contains [
		schema:name \\"Person\\" ;
		dot:linktext \\"Person.md#Person\\" ;
		dot:contains [
			schema:name \\"Section\\" ;
			dot:linktext \\"Person.md#Section\\" ;
			<http://example.org/property/property> \\"A\\" ;
		], [
			schema:name \\"Subsection\\" ;
			dot:linktext \\"Person.md#Subsection\\" ;
			<http://example.org/property/property> \\"C\\" ;
		], [
			schema:name \\"Subsection\\" ;
			dot:linktext \\"Person.md#Subsection\\" ;
			<http://example.org/property/property> \\"B\\" ;
			dot:tag \\"person\\" ;
		] ;
		<http://example.org/property/description> \\"the class of persons\\" ;
	] .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/property/property> schema:name \\"property\\" .

"
`;

exports[`triplify examples Test Canvas.canvas 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/Bob.md> schema:name \\"Bob\\" ;
	dot:wikipath \\"bob/Bob.md\\" ;
	ex:details <http://example.org/note/bob/Bob%20Details.md> ;
	<http://example.org/property/lives%20in> <http://example.org/note/houses/BobHouse.md> ;
	<http://example.org/property/drew> <http://example.org/note/houses/img.png> .

<http://example.org/note/houses/BobHouse.md> schema:name \\"BobHouse\\" ;
	dot:wikipath \\"houses/BobHouse.md\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" ;
	dot:wikipath \\"Alice.md\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" ;
	dot:wikipath \\"Person.md\\" .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" ;
	dot:wikipath \\"bob/Bob Details.md\\" .

<http://example.org/note/houses/img.png> schema:name \\"img.png\\" ;
	dot:wikipath \\"houses/img.png\\" .

ex:friends dot:contains <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md> ;
	<http://example.org/property/Same%20as> <http://example.org/note/Person.md> .

<http://example.org/property/Same%20as> schema:name \\"Same as\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/property/drew> schema:name \\"drew\\" .

<http://example.org/note/Test%20Canvas.canvas> schema:name \\"Test Canvas.canvas\\" ;
	dot:contains [
		schema:name \\"Entities\\" ;
		dot:contains <http://example.org/note/bob/Bob.md>, <http://example.org/note/Alice.md>, <http://example.org/note/Person.md>, <http://example.org/note/bob/Bob%20Details.md>, ex:friends ;
	], <http://example.org/note/houses/BobHouse.md>, [
		schema:name \\"Resources\\" ;
		dot:contains <http://example.org/note/houses/img.png> ;
	] .

"
`;

exports[`triplify examples Yaml.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/Yaml.md> dot:tag \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://example.org/property/togs> \\"cats\\", \\"dogs\\" ;
	<http://example.org/property/one> \\"pepe\\", \\"carlos\\" ;
	<http://example.org/property/an-uri> <http://some-uri.com> ;
	schema:name \\"Yaml\\" .

<http://example.org/property/date%20updated> schema:name \\"date updated\\" .

<http://example.org/property/togs> schema:name \\"togs\\" .

<http://example.org/property/one> schema:name \\"one\\" .

<http://example.org/property/an-uri> schema:name \\"an-uri\\" .

"
`;

exports[`triplify examples bob/Bob Details.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/Bob%20Details.md> schema:name \\"Bob Details\\" ;
	dot:contains [
		schema:name \\"More details about Bob\\" ;
		dot:linktext \\"bob/Bob Details.md#More details about Bob\\" ;
		dot:contains [
			schema:name \\"Section\\" ;
			dot:linktext \\"bob/Bob Details.md#Section\\" ;
			<http://example.org/property/description> \\"Section 1\\" ;
			<http://example.org/property/somewhat%20related> <http://example.org/note/Bob%20Details.md> ;
			<http://example.org/property/points%20to%20the%20document> <http://example.org/note/Bob%20Details.md> ;
		], [
			schema:name \\"Section\\" ;
			dot:linktext \\"bob/Bob Details.md#Section\\" ;
			<http://example.org/property/description> \\"Section 2\\" ;
			dot:related <http://example.org/note/Bob%20Details.md> ;
		], [
			schema:name \\"Section\\" ;
			dot:linktext \\"bob/Bob Details.md#Section\\" ;
			<http://example.org/property/description> \\"Section 3\\" ;
			dot:related <http://example.org/note/Unknown.md> ;
		] ;
	] .

<http://example.org/property/description> schema:name \\"description\\" .

<http://example.org/property/somewhat%20related> schema:name \\"somewhat related\\" .

<http://example.org/note/Bob%20Details.md> schema:name \\" Pointer to section 3\\" .

<http://example.org/property/points%20to%20the%20document> schema:name \\"points to the document\\" .

<http://example.org/note/Unknown.md> schema:name \\"Unknown\\" .

"
`;

exports[`triplify examples bob/Bob.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/bob/Bob.md> <http://example.org/property/with%20image> <http://example.org/note/img.png.md> ;
	dot:related <http://example.org/note/Link.md>, <http://something.com> ;
	<http://example.org/property/lives%20in> <http://example.org/note/bob/houses/BobHouse.md> ;
	<http://example.org/property/has%20details> \\"[Bob Details.md](./bob/Bob Details.md)\\" ;
	ex:knows <http://example.org/note/bob/Alice.md> ;
	<http://example.org/property/has%20image%201> <http://example.org/note/bob/houses/img.png> ;
	a <http://example.org/note/Person.md> ;
	schema:name \\"Bob\\" .

<http://example.org/property/with%20image> schema:name \\"with image\\" .

<http://example.org/note/img.png.md> schema:name \\"img.png\\" .

<http://example.org/note/Link.md> schema:name \\"Link\\" .

<http://example.org/property/lives%20in> schema:name \\"lives in\\" .

<http://example.org/note/bob/houses/BobHouse.md> schema:name \\"BobHouse\\" .

<http://example.org/property/has%20details> schema:name \\"has details\\" .

<http://example.org/note/bob/Alice.md> schema:name \\"Alice\\" .

<http://example.org/property/has%20image%201> schema:name \\"has image 1\\" .

<http://example.org/note/bob/houses/img.png> schema:name \\"img.png\\" .

<http://example.org/note/Person.md> schema:name \\"Person\\" .

"
`;

exports[`triplify examples dot triples.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/dot%20triples.md> schema:name \\"dot triples\\" ;
	dot:contains [
		schema:name \\"Dot triples syntax\\" ;
		dot:linktext \\"dot triples.md#Dot triples syntax\\" ;
		dot:contains [
			schema:name \\"Alice\\" ;
			dot:linktext \\"dot triples.md#Alice\\" ;
			<http://example.org/property/has> \\"37 years old\\" ;
			ex:knows <http://example.org/note/Bob.md> ;
			dot:related <http://example.org/note/Bob.md>, <http://example.org/note/Alice.md> ;
		], [
			schema:name \\"Embedded\\" ;
			dot:linktext \\"dot triples.md#Embedded\\" ;
			<http://example.org/property/EA> \\"EB\\" ;
			<http://example.org/property/EC> \\"ED\\" ;
		] ;
	] .

<http://example.org/property/has> schema:name \\"has\\" .

<http://example.org/note/Bob.md> schema:name \\"Bob\\" .

<http://example.org/note/Alice.md> schema:name \\"Alice\\" .

<http://example.org/property/A> <http://example.org/property/B> \\"C\\" .

<http://example.org/property/B> schema:name \\"B\\" .

<http://example.org/property/EA> schema:name \\"EA\\" .

<http://example.org/property/EC> schema:name \\"EC\\" .

"
`;

exports[`triplify examples houses/BobHouse.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/houses/BobHouse.md> a \\"House\\" ;
	schema:name \\"BobHouse\\" .

"
`;

exports[`triplify examples houses/img.png 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .
"
`;

exports[`triplify examples links.md 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

<http://example.org/note/links.md> schema:name \\"links\\" ;
	dot:contains [
		schema:name \\"Links\\" ;
		dot:linktext \\"links.md#Links\\" ;
		dot:contains [
			schema:name \\"Produce two simple links\\" ;
			dot:linktext \\"links.md#Produce two simple links\\" ;
			dot:related <http://web2.org>, <http://web1.org> ;
		], [
			schema:name \\"Alias\\" ;
			dot:linktext \\"links.md#Alias\\" ;
			dot:related <https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> ;
		], [
			schema:name \\"More data\\" ;
			dot:linktext \\"links.md#More data\\" ;
			dot:related <http://example.org/note/links.md> ;
		] ;
	] .

<https://www.rand.org/content/dam/rand/pubs/papers/2008/P899.pdf> schema:name \\"1954\\" .

"
`;
